<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        tools:context=".TimerConfigActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <EditText
                android:id="@+id/edt_target"
                android:hint="@string/target_tint"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorHint="@color/light_blue_50"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.AutoCompleteTextView"/>

        <EditText
            android:id="@+id/edt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_hint"
            android:inputType="time"
            android:maxLength="5"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_blue_50" />

        <EditText
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:maxLength="10"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_blue_50" />
        <Button
                android:id="@+id/btn_save"
                android:text="@string/save_btn"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
        />
    </LinearLayout>
</RelativeLayout>